[gd_scene load_steps=18 format=2]

[ext_resource path="res://Art/TimeJobTemp.png" type="Texture" id=1]
[ext_resource path="res://AddEntry.gd" type="Script" id=2]
[ext_resource path="res://Placeholder.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Inter-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://AddEntryTheme.tres" type="Theme" id=5]
[ext_resource path="res://NewStyleBIG.tres" type="StyleBox" id=6]
[ext_resource path="res://Fonts/Inter-SemiBold.ttf" type="DynamicFontData" id=7]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 53
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="TimeJobTemp" type="Sprite" parent="."]
position = Vector2( 402, 622 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="TimeJobTemp"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -361.0
margin_top = -461.0
margin_right = -397.0
margin_bottom = -508.0

[node name="VBoxContainer" type="VBoxContainer" parent="TimeJobTemp/Control"]
margin_left = 20.0
margin_top = 59.0
margin_right = 711.0
margin_bottom = 548.0
custom_constants/separation = 40

[node name="part_number" type="LineEdit" parent="TimeJobTemp/Control/VBoxContainer"]
margin_right = 691.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
placeholder_text = "Part Number"

[node name="bin_location" type="LineEdit" parent="TimeJobTemp/Control/VBoxContainer"]
margin_top = 132.0
margin_right = 691.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
placeholder_text = "Bin Location"

[node name="description" type="LineEdit" parent="TimeJobTemp/Control/VBoxContainer"]
margin_top = 264.0
margin_right = 691.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
placeholder_text = "Description"

[node name="quantity" type="LineEdit" parent="TimeJobTemp/Control/VBoxContainer"]
margin_top = 396.0
margin_right = 691.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
placeholder_text = "Quantity"

[node name="add_entry" type="Button" parent="TimeJobTemp/Control"]
margin_left = 11.0
margin_top = 735.0
margin_right = 180.0
margin_bottom = 847.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.541176, 0.858824, 1, 1 )
custom_styles/normal = ExtResource( 6 )
text = "ADD"

[node name="remove_entry" type="Button" parent="TimeJobTemp/Control"]
margin_left = 519.0
margin_top = 735.0
margin_right = 702.0
margin_bottom = 847.0
theme = SubResource( 8 )
custom_colors/font_color = Color( 0.541176, 0.858824, 1, 1 )
custom_styles/normal = ExtResource( 6 )
text = "REMOVE"

[node name="entry_info_label" type="Label" parent="TimeJobTemp/Control"]
margin_left = 31.0
margin_top = 561.0
margin_right = 691.0
margin_bottom = 709.0
theme = SubResource( 10 )
align = 1
valign = 1
autowrap = true

[node name="back_button" type="Button" parent="."]
margin_left = 18.0
margin_top = 10.0
margin_right = 91.0
margin_bottom = 83.0
theme = SubResource( 6 )
text = "<"

[connection signal="pressed" from="TimeJobTemp/Control/add_entry" to="." method="_on_add_entry_pressed"]
[connection signal="pressed" from="TimeJobTemp/Control/remove_entry" to="." method="_on_remove_entry_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
